Exclude rive file manager folder from transpilation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,8 @@
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "exclude": [
+    "rive-file-manager/**/*"
+  ]
 }
