--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,11 @@
     "strictBindCallApply": true,
     "strictPropertyInitialization": true,
     "noImplicitThis": true,
+    "noImplicitOverride": true,
+    "exactOptionalPropertyTypes": true,
     "alwaysStrict": true,
     "noUnusedLocals": false,
-    "noUnusedParameters": false,
+    "noUnusedParameters": true,
     "noImplicitReturns": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
