--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "parcel build export/index.html"
   },
   "dependencies": {
+    "@box2d/core": "^0.11.0",
     "@rive-app/canvas-advanced": "2.21.6",
     "parcel": "^2.13.0"
   },
