Switched to WebGL + changes
* Switched from parcel to vite
* New python script to get new .wasm and fast switch between canvas, webgl and webgl2
* Added .flush() to renderer

--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     }
   },
   "scripts": {
-    "start": "parcel export/index.html",
-    "build": "parcel build export/index.html"
+    "start": "vite",
+    "build": "vite build",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@box2d/core": "^0.11.0",
-    "@rive-app/canvas-advanced": "2.21.6",
-    "parcel": "^2.13.0"
+    "@rive-app/webgl-advanced": "2.21.6"
   },
   "devDependencies": {
-    "@parcel/transformer-typescript-tsc": "^2.13.0",
-    "typescript": "latest"
+    "typescript": "latest",
+    "vite": "^5.4.11",
+    "vite-plugin-checker": "^0.8.0"
   }
 }
